--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  @apply bg-dark-300 font-sans text-base font-normal text-gray;
+  @apply bg-dark-300 font-sans text-gray;
 }
 
 ::-webkit-scrollbar {
